// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Bridge route list should render the routes, when a error occurs 1`] = `
<DocumentFragment>
  <div
    id="route-8"
    style="width: 100%; margin-bottom: 1.2rem;"
  >
    <div
      aria-expanded="false"
      aria-label="select route"
      class="sc-crHmcD haCQkc sc-egiyK crsdKY"
      role="button"
      tabindex="0"
    >
      <div
        class="sc-bdvvtL sc-jRQBWg fGXmcv fAOTCB sc-gKclnd esCjbG"
      >
        <div
          class="sc-iCfMLu jHmZzF"
        >
          <div
            class="sc-furwcr ejwoJX"
          >
            <svg
              class="amount__icon"
              color="#FFFFFF"
              height="3.2rem"
              id="6274.182481866423"
              width="2.8rem"
            >
              usdc.svg
            </svg>
            <span
              class="amount__number"
            >
              1
            </span>
          </div>
          <div
            class="sc-pVTFL kPlIfM"
          >
            <svg
              class="arrow__icon"
              color="#FFFFFF"
              height="1.8rem"
              id="7882.123382469668"
              width="2.1rem"
            >
              double-arrow-right.svg
            </svg>
          </div>
          <div
            class="sc-jrQzAO dxiNdQ"
          >
            <svg
              class="chain__icon chain__icon--sm"
              color="#FFFFFF"
              height="2.6rem"
              id="6902.202122668638"
              width="2.6rem"
            >
              hop.svg
            </svg>
            <p
              class="chain__name"
            >
              Hop Goerli
            </p>
            <div
              class="chain__group"
            >
              <span>
                <svg
                  class="network__icon"
                  color="#FFFFFF"
                  height="2.6rem"
                  id="8959.033485136084"
                  width="2.6rem"
                >
                  hop.svg
                </svg>
              </span>
              <span>
                Hop Goerli
              </span>
            </div>
          </div>
          <div
            class="sc-pVTFL kPlIfM"
          >
            <svg
              class="arrow__icon"
              color="#FFFFFF"
              height="1.8rem"
              id="5568.916387669392"
              width="2.1rem"
            >
              double-arrow-right.svg
            </svg>
          </div>
          <div
            class="sc-furwcr bwENRV"
          >
            <svg
              class="amount__icon"
              color="#FFFFFF"
              height="3.2rem"
              id="1677.122775902027"
              width="2.8rem"
            >
              usdc.svg
            </svg>
            <span
              class="amount__number"
            >
              1.0
            </span>
          </div>
        </div>
        <div
          class="sc-bdvvtL sc-jRQBWg fGXmcv eQPwQD"
        >
          <p
            class="sc-bqiRlB kMHECB"
            data-testid="route-fees"
          >
            gas-fee : ~ 0.61 $ | ~ 5 min
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-bdvvtL sc-jRQBWg fGXmcv fAOTCB sc-gKclnd lkmuhl"
    style="width: 100%; margin-bottom: 1.2rem;"
  >
    <p
      style="font-size: 1.6rem; color: rgb(191, 44, 68); margin: auto; text-align: center;"
    >
      error-showing-routes
    </p>
  </div>
</DocumentFragment>
`;

exports[`The Bridge route list should render the routes, when all of them have errors 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL sc-jRQBWg fGXmcv fAOTCB sc-gKclnd lkmuhl"
    style="width: 100%; margin-bottom: 1.2rem;"
  >
    <p
      style="font-size: 1.6rem; color: rgb(191, 44, 68); margin: auto; text-align: center;"
    >
      error-showing-routes
    </p>
  </div>
  <div
    class="sc-bdvvtL sc-jRQBWg fGXmcv fAOTCB sc-gKclnd lkmuhl"
    style="width: 100%; margin-bottom: 1.2rem;"
  >
    <p
      style="font-size: 1.6rem; color: rgb(191, 44, 68); margin: auto; text-align: center;"
    >
      error-showing-routes
    </p>
  </div>
</DocumentFragment>
`;

exports[`The Bridge route list should render with routes 1`] = `
<DocumentFragment>
  <div
    id="route-8"
    style="width: 100%; margin-bottom: 1.2rem;"
  >
    <div
      aria-expanded="false"
      aria-label="select route"
      class="sc-crHmcD haCQkc sc-egiyK crsdKY"
      role="button"
      tabindex="0"
    >
      <div
        class="sc-bdvvtL sc-jRQBWg fGXmcv fAOTCB sc-gKclnd esCjbG"
      >
        <div
          class="sc-iCfMLu jHmZzF"
        >
          <div
            class="sc-furwcr ejwoJX"
          >
            <svg
              class="amount__icon"
              color="#FFFFFF"
              height="3.2rem"
              id="9929.559218610551"
              width="2.8rem"
            >
              usdc.svg
            </svg>
            <span
              class="amount__number"
            >
              1
            </span>
          </div>
          <div
            class="sc-pVTFL kPlIfM"
          >
            <svg
              class="arrow__icon"
              color="#FFFFFF"
              height="1.8rem"
              id="18.345668438854414"
              width="2.1rem"
            >
              double-arrow-right.svg
            </svg>
          </div>
          <div
            class="sc-jrQzAO dxiNdQ"
          >
            <svg
              class="chain__icon chain__icon--sm"
              color="#FFFFFF"
              height="2.6rem"
              id="9272.842567708822"
              width="2.6rem"
            >
              hop.svg
            </svg>
            <p
              class="chain__name"
            >
              Hop Goerli
            </p>
            <div
              class="chain__group"
            >
              <span>
                <svg
                  class="network__icon"
                  color="#FFFFFF"
                  height="2.6rem"
                  id="931.9875134078274"
                  width="2.6rem"
                >
                  hop.svg
                </svg>
              </span>
              <span>
                Hop Goerli
              </span>
            </div>
          </div>
          <div
            class="sc-pVTFL kPlIfM"
          >
            <svg
              class="arrow__icon"
              color="#FFFFFF"
              height="1.8rem"
              id="7190.263315394177"
              width="2.1rem"
            >
              double-arrow-right.svg
            </svg>
          </div>
          <div
            class="sc-furwcr bwENRV"
          >
            <svg
              class="amount__icon"
              color="#FFFFFF"
              height="3.2rem"
              id="1015.588650526194"
              width="2.8rem"
            >
              usdc.svg
            </svg>
            <span
              class="amount__number"
            >
              1.0
            </span>
          </div>
        </div>
        <div
          class="sc-bdvvtL sc-jRQBWg fGXmcv eQPwQD"
        >
          <p
            class="sc-bqiRlB kMHECB"
            data-testid="route-fees"
          >
            gas-fee : ~ 0.61 $ | ~ 5 min
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    id="route-6"
    style="width: 100%; margin-bottom: 1.2rem;"
  >
    <div
      aria-expanded="false"
      aria-label="select route"
      class="sc-crHmcD haCQkc sc-egiyK crsdKY"
      role="button"
      tabindex="0"
    >
      <div
        class="sc-bdvvtL sc-jRQBWg fGXmcv fAOTCB sc-gKclnd ebgUKt"
      >
        <div
          class="sc-iCfMLu jHmZzF"
        >
          <div
            class="sc-furwcr ejwoJX"
          >
            <svg
              class="amount__icon"
              color="#FFFFFF"
              height="3.2rem"
              id="5522.752829713938"
              width="2.8rem"
            >
              usdc.svg
            </svg>
            <span
              class="amount__number"
            >
              1
            </span>
          </div>
          <div
            class="sc-pVTFL kPlIfM"
          >
            <svg
              class="arrow__icon"
              color="#FFFFFF"
              height="1.8rem"
              id="4129.113657005372"
              width="2.1rem"
            >
              double-arrow-right.svg
            </svg>
          </div>
          <div
            class="sc-jrQzAO dxiNdQ"
          >
            <svg
              class="chain__icon chain__icon--sm"
              color="#FFFFFF"
              height="2.6rem"
              id="8093.700593508699"
              width="2.6rem"
            >
              polygon.svg
            </svg>
            <p
              class="chain__name"
            >
              Polygon POS Goerli
            </p>
            <div
              class="chain__group"
            >
              <span>
                <svg
                  class="network__icon"
                  color="#FFFFFF"
                  height="2.6rem"
                  id="5299.642704346304"
                  width="2.6rem"
                >
                  polygon.svg
                </svg>
              </span>
              <span>
                Polygon POS Goerli
              </span>
            </div>
          </div>
          <div
            class="sc-pVTFL kPlIfM"
          >
            <svg
              class="arrow__icon"
              color="#FFFFFF"
              height="1.8rem"
              id="3856.0601027701264"
              width="2.1rem"
            >
              double-arrow-right.svg
            </svg>
          </div>
          <div
            class="sc-furwcr bwENRV"
          >
            <svg
              class="amount__icon"
              color="#FFFFFF"
              height="3.2rem"
              id="8860.828466341536"
              width="2.8rem"
            >
              usdc.svg
            </svg>
            <span
              class="amount__number"
            >
              1.0
            </span>
          </div>
        </div>
        <div
          class="sc-bdvvtL sc-jRQBWg fGXmcv eQPwQD"
        >
          <p
            class="sc-bqiRlB kMHECB"
            data-testid="route-fees"
          >
            gas-fee : ~ 0.63 $ | ~ 30 min
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
